fix(tickets): dropdown arrow not showing with certain themes

--- a/src/sass/partials/tickets.sass
+++ b/src/sass/partials/tickets.sass
@@ -250,7 +250,7 @@ div#accountsTable_wrapper
 
   select, select:focus
     -webkit-appearance: none
-    background: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><path fill='%23ccc' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>")
+    background: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><path fill='rgba(0,0,0,0.15)' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>")
     background-position: 100% 50%
     background-repeat: no-repeat
     border: none
